// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaDB addFileToDBTemp should create a new MediaTemp entry with the correct data 1`] = `
[MockFunction] {
  "calls": [
    [
      MediaTemp {
        "changeDate": null,
        "description": "test description",
        "exif": {
          "DateTimeOriginal": {
            "_ctor": "ExifDateTime",
            "day": 19,
            "hour": 12,
            "inferredZone": undefined,
            "millisecond": 0,
            "minute": 0,
            "month": 9,
            "rawValue": "2019:09:19 12:00:00",
            "second": 0,
            "tzoffsetMinutes": undefined,
            "year": 2019,
            "zoneName": undefined,
          },
          "Description": "test description",
          "GPSPosition": "42.5, 42.5",
          "ImageSize": "1920x1080",
          "Megapixels": 12,
          "Rating": 5,
        },
        "filePath": "/path/to/file.jpg",
        "fullSizeJpg": "/path/to-fullSize.jpg",
        "imageSize": "1920x1080",
        "keywords": [],
        "megapixels": 12,
        "mimetype": "image/jpg",
        "originalDate": 2019-09-19T12:00:00.000Z,
        "originalName": "original_mock_file.jpg",
        "preview": "/path/to-preview.jpg",
        "rating": 5,
        "size": 1024,
        "timeStamp": null,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`MediaDB getFiles should return correct files if isDynamicFolders === false 1`] = `
{
  "dynamicFolders": [],
  "files": [
    Media {
      "_id": "507f1f77bcf86cd799439011",
      "changeDate": 1688319393000,
      "description": "test description",
      "exif": {
        "DateTimeOriginal": {
          "_ctor": "ExifDateTime",
          "day": 19,
          "hour": 12,
          "inferredZone": undefined,
          "millisecond": 0,
          "minute": 0,
          "month": 9,
          "rawValue": "2019:09:19 12:00:00",
          "second": 0,
          "tzoffsetMinutes": undefined,
          "year": 2019,
          "zoneName": undefined,
        },
        "Description": "test description",
        "GPSPosition": "42.5, 42.5",
        "ImageSize": "1920x1080",
        "Megapixels": 12,
        "Rating": 5,
      },
      "filePath": "/path/to/mockFile.jpg",
      "fullSizeJpg": "/path/to/mockFile-fullSize.jpg",
      "imageSize": "1920x1080",
      "keywords": [
        "test",
        "media",
      ],
      "megapixels": 12,
      "mimetype": "image/jpg",
      "originalDate": 2019-09-19T10:00:00.000Z,
      "originalName": "original_mock_file.jpg",
      "preview": "/path/to/mockFile-preview.jpg",
      "rating": 5,
      "size": 1024,
      "timeStamp": "00:00:00.100",
    },
  ],
  "filesSizeSum": 234,
  "searchPagination": {
    "currentPage": 1,
    "nPerPage": 50,
    "resultsCount": 0,
    "totalPages": 1,
  },
}
`;

exports[`MediaDB getFiles should return correct files if isDynamicFolders === true 1`] = `
{
  "dynamicFolders": [
    "main",
    "main/subfolder",
    "main/subfolder/subfolder2",
    "main2",
  ],
  "files": [
    Media {
      "_id": "507f1f77bcf86cd799439011",
      "changeDate": 1688319393000,
      "description": "test description",
      "exif": {
        "DateTimeOriginal": {
          "_ctor": "ExifDateTime",
          "day": 19,
          "hour": 12,
          "inferredZone": undefined,
          "millisecond": 0,
          "minute": 0,
          "month": 9,
          "rawValue": "2019:09:19 12:00:00",
          "second": 0,
          "tzoffsetMinutes": undefined,
          "year": 2019,
          "zoneName": undefined,
        },
        "Description": "test description",
        "GPSPosition": "42.5, 42.5",
        "ImageSize": "1920x1080",
        "Megapixels": 12,
        "Rating": 5,
      },
      "filePath": "/path/to/mockFile.jpg",
      "fullSizeJpg": "/path/to/mockFile-fullSize.jpg",
      "imageSize": "1920x1080",
      "keywords": [
        "test",
        "media",
      ],
      "megapixels": 12,
      "mimetype": "image/jpg",
      "originalDate": 2019-09-19T10:00:00.000Z,
      "originalName": "original_mock_file.jpg",
      "preview": "/path/to/mockFile-preview.jpg",
      "rating": 5,
      "size": 1024,
      "timeStamp": "00:00:00.100",
    },
  ],
  "filesSizeSum": 234,
  "searchPagination": {
    "currentPage": 1,
    "nPerPage": 50,
    "resultsCount": 0,
    "totalPages": 1,
  },
}
`;

exports[`MediaDB updateDBMediaEntity should update the media entity with the provided fields 1`] = `
Media {
  "_id": "507f1f77bcf86cd799439011",
  "changeDate": 1672617600000,
  "description": "Updated description",
  "exif": {
    "DateTimeOriginal": {
      "_ctor": "ExifDateTime",
      "day": 19,
      "hour": 12,
      "inferredZone": undefined,
      "millisecond": 0,
      "minute": 0,
      "month": 9,
      "rawValue": "2019:09:19 12:00:00",
      "second": 0,
      "tzoffsetMinutes": undefined,
      "year": 2019,
      "zoneName": undefined,
    },
    "Description": "test description",
    "GPSPosition": "42.5, 42.5",
    "ImageSize": "1920x1080",
    "Megapixels": 12,
    "Rating": 5,
  },
  "filePath": "/updated/path/to/file.jpg",
  "fullSizeJpg": "/path/to/mockFile-fullSize.jpg",
  "imageSize": "1920x1080",
  "keywords": [
    "updated",
    "keywords",
  ],
  "megapixels": 12,
  "mimetype": "image/jpg",
  "originalDate": 2010-10-10T10:10:10.000Z,
  "originalName": "updated_media.jpg",
  "preview": "/path/to/mockFile-preview.jpg",
  "rating": 4,
  "size": 1024,
  "timeStamp": "00:00:00.500",
}
`;
